# tools

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  doxconfig
doc/html/: annotated.html  classVec3-members.html  classVec3.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  main_8cpp.html  menudata.js  vec3_8cpp.html  vec3_8h.html  vec3_8h_source.html
doc/html/search/: all_0.js  all_3.js  all_4.js  all_8.js  all_9.js  all_a.js  all_b.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js
doc/latex/: annotated.tex  classVec3.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  main_8cpp.tex  refman.tex  vec3_8cpp.tex  vec3_8h.tex
include/: Mat2.h  Mat3.h  Mat4.h  light.h  mat2.h  mat3.h  mat4.h  normal3.h  orthonormal.h  point3.h  ray.h  tools.h  vec2.h  vec3.h  vec4.h
src/: main.cpp  vec2.cpp  vec3.cpp  vec4.cpp
test/: Test.cpp  TestVector.cpp  main.cpp  test.cpp  testVec2.cpp
